fixed accidental undo on mobile styles

--- a/css/post_show.css
+++ b/css/post_show.css
@@ -30,4 +30,7 @@
   .contentblock {
     margin-top: 150px;
   }
+  .blog.content {
+    width: auto;
+  }
 }
